Fixed overflow of charts and added background color for line charts

--- a/src/components/order-card/order-card.module.css
+++ b/src/components/order-card/order-card.module.css
@@ -8,7 +8,8 @@
 }
 
 .ordersPieChart {
-    max-width: 13vw;
+    height: 220px;
+    width: inherit;
 }
 
 .totalOrders {
