--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,3 +63,8 @@ body {
     height: 610px;
     margin-top: 10px;
 }
+
+.orders-combo-chart {
+    width: inherit;
+    height: inherit;
+}
